wmp-project-ing

--- a/eclipse-workspace/WMP/.project
+++ b/eclipse-workspace/WMP/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>WMP</name>
+	<name>WMP05201721</name>
 	<comment></comment>
 	<projects>
 	</projects>
